# noaawc

./: .gitignore  CHANGELOG.md  COMANDOS.md  Pipfile  README.md  Untitled.ipynb  Untitled1.ipynb  commands.md  el_nino.py  el_nino2.py  gfs_download.py  global.py  make_plots.py  ocean_plots.py  pyproject.toml  requirements.txt  robinson_projection.md  ruff.toml  setup.py  studio.ipynb  temsup.py  temwindjet.py  test_gfs.py  test_plot.py  test_plot_all_keys.py  test_plot_merc.py  test_plot_sat.py  test_videoplot_all_keys.py  teste_keys.py
.gfs_cache/: 20260418_00_d2m_0p25_pgrb2_f000.grib2  20260418_00_d2m_0p25_pgrb2_f003.grib2  20260418_00_d2m_0p25_pgrb2_f006.grib2  20260418_00_d2m_0p25_pgrb2_f009.grib2  20260418_00_d2m_0p25_pgrb2_f012.grib2  20260418_00_d2m_0p25_pgrb2_f015.grib2  20260418_00_d2m_0p25_pgrb2_f018.grib2  20260418_00_d2m_0p25_pgrb2_f021.grib2  20260418_00_d2m_0p25_pgrb2_f024.grib2  20260418_00_d2m_0p25_pgrb2_f027.grib2  20260418_00_d2m_0p25_pgrb2_f030.grib2  20260418_00_d2m_0p25_pgrb2_f033.grib2  20260418_00_d2m_0p25_pgrb2_f036.grib2  20260418_00_d2m_0p25_pgrb2_f039.grib2  20260418_00_d2m_0p25_pgrb2_f042.grib2  20260418_00_d2m_0p25_pgrb2_f045.grib2  20260418_00_d2m_0p25_pgrb2_f048.grib2  20260418_00_d2m_0p25_pgrb2_f051.grib2  20260418_00_d2m_0p25_pgrb2_f054.grib2  20260418_00_d2m_0p25_pgrb2_f057.grib2  20260418_00_d2m_0p25_pgrb2_f060.grib2  20260418_00_d2m_0p25_pgrb2_f063.grib2  20260418_00_d2m_0p25_pgrb2_f066.grib2  20260418_00_d2m_0p25_pgrb2_f069.grib2  20260418_00_d2m_0p25_pgrb2_f072.grib2  20260418_00_d2m_0p25_pgrb2_f075.grib2  (+261 more)
noaawc/: .plot.py.swp  (+17 more)
(+33 files in other folders)
