[tool.poetry]
name = "noaawc"
version = "0.1.0"
description = "a lib for work climate data"
authors = ["reinanbr <perseu912@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
noawclg = "^0.0.8"
basemap = "^2.0.0"
imageio = "^2.23.0"
psutil = "^7.0.0"
kitano = "^0.0.8.5"
pytest = "^8.2.1"
numpy = "^2.3"
pandas = "^2.3"
scipy = "^1.10.1"



# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
# nimateplot = "0.3.2"
opencv-python = "^4.11.0.86"
